crates/biome_html_parser/tests/html_specs/ok/glimmer/block_params_with_as.gjs
<template>
  {{#each items as |item|}}
    {{item}}
  {{/each}}

  {{#let value as |v|}}
    {{v}}
  {{/let}}
</template>
