crates/biome_html_parser/tests/html_specs/error/glimmer/missing_block_closing.gjs
<template>
  {{#if condition}}
    <div>Content</div>
</template>
